[package]
name = "egui-twemoji"
description = "An egui text widget with Twemoji emotes."
license = "Unlicense OR MIT OR Apache-2.0"
exclude = ["media/**"]
documentation = "https://docs.rs/egui-twemoji"
homepage = "https://github.com/zeozeozeo/egui-twemoji"
repository = "https://github.com/zeozeozeo/egui-twemoji"
categories = ["gui"]
keywords = ["egui", "emoji", "twemoji", "widget"]
readme = "README.md"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.27", default-features = false }
twemoji-assets = { version = "1.3.0", default-features = false }
unicode-segmentation = "1.11.0"

[dev-dependencies]
eframe = "0.27"
egui_extras = { version = "0.27", features = ["svg"] }

[features]
default = ["svg"]

## SVG emojis
svg = ["twemoji-assets/svg"]

## PNG emojis
png = ["twemoji-assets/png"]
