[package]
name = "egui-twemoji"
description = "An egui widget that renders colored Twemojis."
license = "Unlicense OR MIT OR Apache-2.0"
exclude = ["media/**"]
documentation = "https://docs.rs/egui-twemoji"
homepage = "https://github.com/zeozeozeo/egui-twemoji"
repository = "https://github.com/zeozeozeo/egui-twemoji"
categories = ["gui"]
keywords = ["egui", "emoji", "twemoji", "widget"]
readme = "README.md"
version = "0.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.33.0", default-features = false }
twemoji-assets = { version = "=1.4.0", default-features = false }
unicode-segmentation = "1.12.0"

[dev-dependencies]
eframe = "0.33.0"
egui_extras = { version = "0.33.0", features = ["svg"] }

[features]
default = ["svg"]

## SVG emojis
svg = ["twemoji-assets/svg"]

## PNG emojis
png = ["twemoji-assets/png"]
